BuildHughes/translation-tool/inputs/source_meta/objects/Offers__c.object
<CustomObject>
    <fields>
        <fullName>Add_On_Upfront_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add On Upfront Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anytime_Bytes_Display_Name__c</fullName>
        <label>Anytime Bytes Display Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anytime_Bytes__c</fullName>
        <label>Anytime Bytes (GB/Month)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Bytes_Display_Name__c</fullName>
        <label>Bonus Bytes Display Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Bytes__c</fullName>
        <label>Bonus Bytes (GB/Month)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                    <default>true</default>
                    <label>Consumer</label>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSR</fullName>
                </value>
                <value>
                    <fullName>Partner Portal</fullName>
                    <default>true</default>
                    <label>Partner Portal</label>
                </value>
                <value>
                    <fullName>Self-Care Portal</fullName>
                </value>
                <value>
                    <fullName>Self-Ordering Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Allowance_Manager__c</fullName>
        <label>Data Allowance Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gateway</fullName>
                </value>
                <value>
                    <fullName>Procera</fullName>
                    <isActive>false</isActive>
                    <label>Procera</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Price_Name__c</fullName>
        <label>Display Price Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Price_Old__c</fullName>
        <label>Display Price Old</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Price_With_Tax__c</fullName>
        <label>Display Price With Tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Price__c</fullName>
        <label>Display Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Sequence__c</fullName>
        <label>Display Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Download_Speed_Display_Name__c</fullName>
        <label>Download Speed Display Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download_Speed__c</fullName>
        <label>Download Speed (Mbps)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiring__c</fullName>
        <formula>if(End_Date__c - Today() > 0 ,End_Date__c - Today(),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiring in(Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geography_Available_Count__c</fullName>
        <label>Geography Available Count</label>
        <summaryForeignKey>Offer_Geography_Available__c.Offer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Geography_Blocked_Count__c</fullName>
        <label>Geography Blocked Count</label>
        <summaryForeignKey>Offer_GeographyBlocked__c.Offer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Maximum_Credit_Score__c</fullName>
        <label>Maximum Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Credit_Score__c</fullName>
        <label>Minimum Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Description__c</fullName>
        <label>Offer Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Display_Name__c</fullName>
        <label>Offer Display Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Offer_Partner_Count__c</fullName>
        <description>All the child offer partners</description>
        <label>Offer Partner Count</label>
        <summaryForeignKey>Offer_Partner__c.Offer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <label>Offer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>FAP</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Option__c</fullName>
        <label>Payment Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Regular Lease</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_for_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R1</fullName>
                </value>
                <value>
                    <fullName>R2</fullName>
                </value>
                <value>
                    <fullName>R3</fullName>
                </value>
                <value>
                    <fullName>R4</fullName>
                </value>
                <value>
                    <fullName>R5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Smart_Browsing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smart Browsing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strata__c</fullName>
        <label>Strata</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token_Bandwidth_Display_Name__c</fullName>
        <label>Token Bandwidth Display Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Bandwidth__c</fullName>
        <label>Token Bandwidth (GB)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Token_Voucher_Display_Name__c</fullName>
        <label>Token/Voucher Display Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Data_Allowance_Display_Name__c</fullName>
        <label>Total Data Allowance Display Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Data_Allowance__c</fullName>
        <label>Total Data Allowance (GB/Month)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transport_Name__c</fullName>
        <label>Transport Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Speed_Display_Name__c</fullName>
        <label>Upload Speed Display Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Speed__c</fullName>
        <label>Upload Speed (Mbps)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_of_Internet__c</fullName>
        <description>Used for Offer Recommendations to the customer. 
E.g. &quot;Pro&quot; for Moderate Uploads/Downloads Use and offer Satellite = Echostar 17 or Echostar 19
E.g. &quot;Prime&quot; for Basic browsing, photo sharing and social networking and offer Satellite = Echostar 17 or Echostar 19
E.g. &quot;Connect Pro&quot; for Basic browsing, photo sharing and social networking and offer Satellite = Spaceway</description>
        <label>Use of Internet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic browsing, photo sharing and social networking</fullName>
                </value>
                <value>
                    <fullName>Moderate Uploads/Downloads Use</fullName>
                </value>
                <value>
                    <fullName>Heavy uploads/downloads</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_From_Home__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Offer Recommendations to the customer. 
E.g. &quot;Max&quot; in case it is checked and offer Satellite = Echostar 17 or Echostar 19
E.g. &quot;Connect Pro&quot; in case it is checked and offer Satellite = Spaceway
E.g. &quot;Choice&quot; in case it is un-checked and offer Satellite = Echostar 17 or Echostar 19
E.g. &quot;Connect&quot; in case it is un-checked and offer Satellite = Spaceway</description>
        <label>Work From Home</label>
        <type>Checkbox</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>Offer_Type__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>Offer_Type__c</columns>
        <columns>Offer_Display_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All2</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>